--- a/index.1.html
+++ b/index.1.html
@@ -46,7 +46,7 @@
         <span class=" block lg:hidden" onclick="toggle()">
             <i class="fa-solid fa-bars"></i>
         </span>
-        <div class="hidden lg:block"><a href="./signin.html"><button class="px-10 py-4 rounded-lg cursor-pointer bg-[#2A446F] text-white border-2 border-transparent hover:bg-white hover:text-[#2A446F] hover:border-[#2A446F] transition-all duration-300 shadow-[0_10px_30px_rgba(42,68,111,0.5)]">Sign in</button></a>
+        <div class="hidden lg:block"><a href="./signin.html"><button class="px-10 py-4 rounded-lg cursor-pointer bg-[#2A446F] text-white border-2 border-transparent hover:bg-white hover:text-[#2A446F] hover:border-[#2A446F] transition-all duration-300 shadow-[0_5px_15px_rgba(42,68,111,0.5)]">Sign in</button></a>
         </div>
     </div>
 
@@ -65,7 +65,7 @@
                 <li><a href="#">Case Studies</a></li>
             </ul>
         </div>
-        <div class=" lg:hidden mt-5 mx-5"><a href="./signup.html"><button class="px-10 py-4 rounded-lg cursor-pointer bg-[#2A446F] text-white border-2 border-white ">Sign in</a></button>
+        <div class=" lg:hidden mt-5 mx-5"><a href="./signin.html"><button class="px-10 py-4 rounded-lg cursor-pointer bg-[#2A446F] text-white border-2 border-white ">Sign in</a></button>
         </div>
     </div>
 
@@ -76,7 +76,7 @@
         <div>
             <h1 class="font-semibold text-3xl md:text-5xl lg:text-6xl text-[#2A446F] pb-5 lg:pb-10">Trusted Legal <br> Solution For Your <br> Future</h1>
             <h2 class="font-medium text-md md:text-2xl lg:text-2xl">Expertise that Runs Deep, <br> Service that's Personal</h2>
-            <button class="mt-10 px-10 py-5 rounded-md text-white cursor-pointer bg-[#2A446F] hover:bg-white text-white hover:text-[#2A446F] border-2 border-transparent  hover:border-[#2A446F] transition-all duration-300 shadow-[0_10px_30px_rgba(42,68,111,1)]"><a href="./create account.html">Let’s Discuss Your Case</a></button>
+            <button class="mt-10 px-10 py-5 rounded-md text-white cursor-pointer bg-[#2A446F] hover:bg-white text-white hover:text-[#2A446F] border-2 border-transparent  hover:border-[#2A446F] transition-all duration-300 shadow-[0_5px_15px_rgba(42,68,111,0.5)]"><a href="./create account.html">Let’s Discuss Your Case</a></button>
         </div>
     </div>
     <div class="third-section bg-[#F2F2F2] py-15 px-3 lg:px-15 flex justify-around items-center flex-wrap gap-10">
@@ -92,20 +92,20 @@
     <div class="cards-section px-8 lg:px-15 py-5 md:py-10 lg:py-15">
         <h1 class="font-semibold  text-center text-xl md:text-4xl lg:text-3xl text-[#2A446F] pb-7 md:pb-5 lg:pb-10">Why Choose Us</h1>
         <div class="flex md:justify-center lg:justify-between flex-wrap lg:flex-nowrap  gap-10">
-            <div class="border-1 rounded-lg p-4 shadow-[0_10px_30px_rgba(42,68,111,1)] cursor-pointer hover:translate-y-2  transition-all duration-300 hover:bg-[#2A446F] hover:text-white hover:border-none">
+            <div class="border-1 rounded-lg p-4 shadow-[0_5px_15px_rgba(42,68,111,0.5)] cursor-pointer hover:translate-y-2  transition-all duration-300 hover:bg-[#2A446F] hover:text-white hover:border-none">
                 <img src="./photos/img.png" alt="">
                     <h1 class=" text-2xl sm:text-3xl pt-5 ">Deep Expertise</h1>
-                    <p class="text-[8px] sm:text-sm md:text-md pt-5">Our team comprises seasoned legal professionals with expertise <br> in various fields, ready to provide profound legal insights for <br> every case</p>
+                    <p class="text-[10px] sm:text-sm md:text-md pt-5">Our team comprises seasoned legal professionals with expertise <br> in various fields, ready to provide profound legal insights for <br> every case</p>
             </div>
-            <div class="border-1 rounded-lg p-4 shadow-[0_10px_30px_rgba(42,68,111,1)] cursor-pointer hover:translate-y-2  transition-all duration-300  hover:bg-[#2A446F] hover:text-white hover:border-none">
+            <div class="border-1 rounded-lg p-4 shadow-[0_5px_15px_rgba(42,68,111,0.5)] cursor-pointer hover:translate-y-2  transition-all duration-300  hover:bg-[#2A446F] hover:text-white hover:border-none">
                 <img src="./photos/img (1).png" alt="">
                 <h1 class=" text-2xl sm:text-3xl pt-5 ">Personalized Service</h1>
-                <p class="text-[8px] sm:text-sm md:text-md lg:text-md pt-5">We understand that each client has unique needs. We offer <br> personal service and solutions customized to your specific <br>requirements</p>
+                <p class="text-[10px] sm:text-sm md:text-md lg:text-md pt-5">We understand that each client has unique needs. We offer <br> personal service and solutions customized to your specific <br>requirements</p>
             </div>
-            <div class="border-1 rounded-lg p-4 shadow-[0_10px_30px_rgba(42,68,111,1)] cursor-pointer hover:translate-y-3 transition-all duration-300  hover:bg-[#2A446F] hover:text-white hover:border-none">
+            <div class="border-1 rounded-lg p-4 shadow-[0_5px_15px_rgba(42,68,111,0.5)] cursor-pointer hover:translate-y-3 transition-all duration-300  hover:bg-[#2A446F] hover:text-white hover:border-none">
                 <img src="./photos/img (2).png" alt="">
                 <h1 class=" text-2xl sm:text-3xl pt-5 ">Integrity and Ethics</h1>
-                <p class="text-[8px] sm:text-sm md:text-md lg:text-md pt-5">We uphold high standards of integrity and ethics, ensuring that <br> every step taken by our firm aligns with legal norms and <br>regulations</p>
+                <p class="text-[10px] sm:text-sm md:text-md lg:text-md pt-5">We uphold high standards of integrity and ethics, ensuring that <br> every step taken by our firm aligns with legal norms and <br>regulations</p>
             </div>
         </div>
     </div>
@@ -178,16 +178,16 @@
        </div> 
     </div>
     <div class="bg-[#F2F2F2] py-5 md:py-15 px-3 lg:px-15">
-        <h1 class="font-medium  text-center text-lg sm:text-2xl md:text-4xl lg:text-3xl text-[#2A446F] pb-5 lg:pb-10">Our Goals & Achievements <br> in Legal Practice</h1>
-        <p class="text-[#616161] font-medium text-[6px] sm:text-[14px] md:text-sm lg:text-md flex justify-center text-center">Whether you're a business owner, an individual facing legal challenges, or a family <br> seeking guidance, Legal Sphere is dedicated to securing the best possible outcome for <br> you.</p>
+        <h1 class="font-medium  text-center text-2xl sm:text-2xl md:text-4xl lg:text-3xl text-[#2A446F] pb-5 lg:pb-10">Our Goals & Achievements <br> in Legal Practice</h1>
+        <p class="text-[#616161] font-medium text-[10px] sm:text-[14px] md:text-sm lg:text-md flex justify-center text-center">Whether you're a business owner, an individual facing legal challenges, or a family <br> seeking guidance, Legal Sphere is dedicated to securing the best possible outcome for <br> you.</p>
         <div class="w-full aspect-video flex justify-center mt-15 rounded-lg">
             <iframe width="966" height="543" src="https://www.youtube.com/embed/aK2PVtgWLp8" title="Lawyer Career Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </div>
     <div class="bg-[#2A446F] px-4 md:px-10 lg:px-15  py-15" >
         <div class="flex justify-between gap-10 flex-wrap">
-                <h1 class="text-white font-sm md:font-medium text-lg sm:text-xl md:text-3xl lg:text-4xl">Popular Case Studies</h1>
-                <p class="text-[#FFFFFF] font-thin text-[8px] sm:text-2xl md:text-lg lg:text-xl" >These case studies involve a detailed exploration of specific legal issues,<br> the facts surrounding them, the arguments presented by each party,<br> and the ultimate resolution or court decision.</p>
+                <h1 class="text-white font-sm md:font-medium text-2xl sm:text-xl md:text-3xl lg:text-4xl">Popular Case Studies</h1>
+                <p class="text-[#FFFFFF] font-thin text-[12px] sm:text-2xl md:text-lg lg:text-xl" >These case studies involve a detailed exploration of specific legal issues,<br> the facts surrounding them, the arguments presented by each party,<br> and the ultimate resolution or court decision.</p>
         </div>
         <div class=" mt-15 md:mt-30 flex gap-20  flex-wrap ">
             <div class="h-60vh">
@@ -199,8 +199,8 @@
                 <span>:</span>
                 <h4>Family Law</h4>
                 </div>
-                <h1 class="text-white font-medium text-xl sm:text-3xl md:text-4xl pt-10">The Thompson Custody</h1>
-                <p class="text-white text-xs sm:text-sm md:text-medium lg:text-lg font-thin pt-10">Thompson family found themselves entangled in a <br> familial discord that led to a high-stakes legal battle over <br> custody. Mark Thompson, a successful architect, and <br> Emily Thompson, a renowned pediatrician, decided to <br>part ways after 15 years of marriage.</p>
+                <h1 class="text-white font-medium text-2xl sm:text-3xl md:text-4xl pt-10">The Thompson Custody</h1>
+                <p class="text-white text-[14px] sm:text-sm md:text-medium lg:text-lg font-thin pt-10">Thompson family found themselves entangled in a <br> familial discord that led to a high-stakes legal battle over <br> custody. Mark Thompson, a successful architect, and <br> Emily Thompson, a renowned pediatrician, decided to <br>part ways after 15 years of marriage.</p>
                 <div class="flex fixed right-10 ">
                     <img src="./photos/Component 1.png" alt="">
                 </div>
@@ -220,8 +220,8 @@
                     <span>:</span>
                     <h4>Copyright law in the context of AI-generated art</h4>
                 </div>
-                <h1 class="text-white font-medium text-xl sm:text-3xl md:text-4xl pt-10">AI Art Authorship Ambiguity</h1>
-                <p class="text-white text-xs sm:text-sm md:text-medium lg:text-lg font-thin pt-10">Clara discovers her unique artistic style being used to <br> generate new images and sold commercially by an AI <br> platform. She claims copyright infringement and <br> demands compensation.</p>
+                <h1 class="text-white font-medium text-2xl sm:text-3xl md:text-4xl pt-10">AI Art Authorship Ambiguity</h1>
+                <p class="text-white text-[14px] sm:text-sm md:text-medium lg:text-lg font-thin pt-10">Clara discovers her unique artistic style being used to <br> generate new images and sold commercially by an AI <br> platform. She claims copyright infringement and <br> demands compensation.</p>
                  <div class="flex fixed right-10">
                     <img src="./photos/Component 1.png" alt="">
                 </div>
@@ -235,7 +235,7 @@
 <div class="swiper-section px-15 py-5 md:py-15 ">
     <h1 class=" flex justify-center md:justify-start ">Testimonials</h1>
     <h1 class="font-medium flex justify-center md:justify-start text-xl sm:text-2xl md:text-4xl lg:text-5xl text-[#2A446F] pt-3 pb-5 lg:pb-10">What Our Clients Say</h1>
-    <div class="flex gap-20 md:gap-40 items-center flex-wrap md:flex-nowrap">
+    <div class="flex gap-10 md:gap-40 items-center flex-wrap md:flex-nowrap">
         <div class="px-10">
             <div class="flex gap-5 items-center">
                 <img src="./photos/syedmurtaza.png" alt="">
@@ -261,13 +261,13 @@
         </div>
         <div>
             <div class="flex gap-5 md:gap-10 items-center flex-wrap">
-                <h1 class="text-[#616161] text-[15px] sm:text-2xl md:text-2xl">Overcoming Adversity in Family Law</h1>
+                <h1 class="text-[#616161] text-2xl sm:text-2xl md:text-2xl">Overcoming Adversity in Family Law</h1>
                 <div class="flex items-center  text-[#D2AB2D] text-sm sm:text-md md:text-lg">
                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><span class="text-[#D9D9D9] flex items-center"><i class="fa-solid fa-star"></i></span>
                 </div>
             </div>
             <div class="mt-5">
-                <p class="text-[#616161] text-[7px] sm:text-lg">Going through a divorce was the toughest time of my life. I felt lost and <br> overwhelmed, but Legal Sphere stood by me every step of the way. Their team was <br> compassionate, understanding, and incredibly knowledgeable. Thanks to their <br> expertise and dedication, I achieved a fair settlement that protected my financial <br> future and allowed me to focus on healing and rebuilding my life.</p>
+                <p class="text-[#616161] text-[8px] sm:text-lg">Going through a divorce was the toughest time of my life. I felt lost and <br> overwhelmed, but Legal Sphere stood by me every step of the way. Their team was <br> compassionate, understanding, and incredibly knowledgeable. Thanks to their <br> expertise and dedication, I achieved a fair settlement that protected my financial <br> future and allowed me to focus on healing and rebuilding my life.</p>
             </div>
 
         </div>
