--- a/signin.html
+++ b/signin.html
@@ -16,7 +16,7 @@
         }
     </style>
        <div class=" pt-5 px-10 flex justify-center md:justify-end">
-             <button class=" hidden  md:block px-10 py-4 rounded-lg cursor-pointer bg-[#2A446F] text-white border-2 border-transparent hover:bg-white hover:text-[#2A446F] hover:border-[#2A446F] transition-all duration-300 shadow-[0_10px_30px_rgba(42,68,111,1)]"><a href="./create account.html">Sign In</a></button>
+             <button class=" hidden  md:block px-10 py-4 rounded-lg cursor-pointer bg-[#2A446F] text-white border-2 border-transparent hover:bg-white hover:text-[#2A446F] hover:border-[#2A446F] transition-all duration-300 shadow-[0_5px_15px_rgba(42,68,111,0.5)]"><a href="./create account.html">Sign In</a></button>
         </div>
 
     <div class="flex justify-stretch gap-0 md:gap-20 px-10 pb-5  flex-wrap md:flex-nowrap">
@@ -27,14 +27,14 @@
             <div class=" mt-10 md:mt-30">
                  <h1 class="text-3xl text-center font-md">Sign Up To, Lawyer & Client!</h1>
                  <p class="text-[#1A1919] font-normal text-sm text-center">how do you want join our wide community to solve problem</p>
-                <div class="flex mt-7 md:mt-15 gap-8 items-center rounded-xl border-2 border-transparent cursor-pointer hover:border-[#2A446F] p-5 transition-all duration-100 hover:bg-[#2A446F] hover:text-white shadow-[0_10px_30px_rgba(42,68,111,1)] " ><a href="./signup.html">
+                <div class="flex mt-7 md:mt-15 gap-8 items-center rounded-xl border-2 border-transparent cursor-pointer hover:border-[#2A446F] p-5 transition-all duration-100 hover:bg-[#2A446F] hover:text-white shadow-[0_5px_15px_rgba(42,68,111,0.5)] " ><a href="./signup.html">
                     <img src="./photos/Frame 40338.png" alt="">
                     <div>
                         <h1>Join As Client</a></h1>
                         <p class="font-normal text-[8px] sm:text-[10px] md:text-xs text-center">Unlock Your Expertise, Client Lives.</p>
                     </div>
                 </div>
-                <div class="flex mt-7 md:mt-15 gap-8 items-center rounded-xl border-2 border-transparent cursor-pointer hover:border-[#2A446F] p-5 transition-all duration-100 hover:bg-[#2A446F] hover:text-white shadow-[0_10px_30px_rgba(42,68,111,1)] "><a href="./signup.html">
+                <div class="flex mt-7 md:mt-15 gap-8 items-center rounded-xl border-2 border-transparent cursor-pointer hover:border-[#2A446F] p-5 transition-all duration-100 hover:bg-[#2A446F] hover:text-white shadow-[0_5px_15px_rgba(42,68,111,0.5)] "><a href="./signup.html">
                     <img src="./photos/image 16.png" alt="">
                     <div>
                         <h1 class="text-sm m:text-lg">Join As Lawyer</h1>
@@ -42,7 +42,7 @@
                     </a></div>
             </div>
             <div class=" mt-10 md:mt-0 block md:hidden pt-5 px-10 flex justify-center md:justify-end">
-                <button class=" w-full px-10 py-4 rounded-lg cursor-pointer bg-[#2A446F] text-white border-2 border-transparent hover:bg-white hover:text-[#2A446F] hover:border-[#2A446F] transition-all duration-300 shadow-[0_10px_30px_rgba(42,68,111,1)]">Sign In</button>
+                <button class=" w-full px-10 py-4 rounded-lg cursor-pointer bg-[#2A446F] text-white border-2 border-transparent hover:bg-white hover:text-[#2A446F] hover:border-[#2A446F] transition-all duration-300 shadow-[0_5px_15px_rgba(42,68,111,0.5)]"><a href="./signup.html">Sign In</a></button>
             </div>
             <p class=" text-xs pt-20">Copyright © 2023 Herbalist. All rights reserved.</p>
     </div>
